<resources>
    <string name="app_name">佳婷慧</string>
    <string name="name">筛查姓名</string>
    <string name="screenId">筛查ID</string>
    <string name="input_screenid">请输入筛查ID</string>
    <string name="phone">手机号码</string>
    <string name="age">年龄</string>
    <string name="ID">身份证号</string>
    <string name="Required">请输入</string>
    <string name="screenFaild">扫描失败，请重新扫描</string>
    <string name="screenHPV">该用户是复查,不需要绑定HPV码</string>
    <string name="mustInput">必填</string>
    <string name="titleMsg">图像上传工具</string>
    <string name="copy">文件复制</string>
    <string name="coping">正在复制文件...</string>
    <string name="getimg">获取图像</string>
    <string name="see_image">查看图像</string>
    <string name="requestPission">请赋予相应的权限</string>
    <string name="copySuccess">文件复制成功</string>
    <string name="file_no_exist">暂无文件</string>
    <string name="import_Success">上传完成</string>
    <string name="copyFaild">文件复制失败</string>
    <string name="deletesuccess">原始文件删除成功</string>
    <string name="deletefaild">原始文件删除失败</string>
    <string name="imgAPK">请先安装图像获取软件</string>
    <string name="copyFile">请先复制文件</string>
    <string name="createFaild">文件创建失败</string>
    <string name="createSuccess">文件创建成功</string>
    <string name="fileCopying">文件正在复制</string>
    <string name="fileDelete">文件正在删除</string>
    <string name="stopApk">再按一次退出程序</string>
    <string name="screeningID_empty">尚未登记患者</string>
    <string name="title_bar">筛查信息</string>
    <string name="bt_login_permission">请授权相应的权限</string>
    <string name="bt_dialog_show">正在登录...</string>
    <string name="login_error_show">账号或者密码错误，请重新输入</string>
    <string name="user_name">帐户名称:</string>
    <string name="user_name_hint">请输入手机号码</string>
    <string name="user_password">账户密码:</string>
    <string name="user_password_hint">请输入用户密码</string>
    <string name="user_password_memory">记住密码</string>
    <string name="no_user_account">没有账号？</string>
    <string name="user_register">注册</string>
    <string name="login">登录</string>
    <string name="user_register_message_error">注册信息不能为空</string>
    <string name="user_register_success">注册成功，请登录</string>
    <string name="collect_msg">正在准备上传的信息...</string>
    <string name="importSuccess">文件上传成功</string>
    <string name="importFaild">文件上传失败</string>
    <string name="testWifi">正在测试网络环境</string>
    <string name="nonet">WIFI未连接，请连接正确的WIFI</string>
    <string name="errornet">请连接可以进行网络访问的WIFI</string>
    <string name="installFaild">图像获取软件安装失败</string>
    <string name="user_password_registration_hint">请输入密码（密码最少6位）</string>
    <string name="user_password_again">确认密码:</string>
    <string name="user_password_again_hint">请再次输入密码</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="ok">确认</string>
    <string name="hospital">医院名称</string>
    <string name="hospital_hint">请输入医院名称</string>
    <string name="dName">医生</string>
    <string name="dDate">筛查日期</string>
    <string name="register">注册</string>
    <string name="hpv_patient">HPV试管码</string>
    <string name="tct_patient">TCT试管码</string>
    <string name="RequiredHPV">HPV</string>
    <string name="RequiredCytology">细胞学</string>
    <string name="save">保存</string>
    <string name="title_msg">提示框</string>
    <string name="hpvhad">该HPV码已存在,点击确定保存该HPV码，点击取消则不保存</string>
    <string name="tcthad">该TCT码已存在,点击确定保存该TCT码，点击取消则不保存</string>
    <string name="idhad">该身份证号已存在,点击确定保存该身份证信息，点击取消则不保存</string>
    <string name="saveMSg">您确定要保存该人员信息？</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="patients_add">信息登记</string>
    <string name="case_title">信息管理</string>
    <string name="setting_title">系统中心</string>
    <string name="patients_information">筛查信息</string>
    <string name="patients_detail">详细信息</string>
    <string name="importExcel">导出Excel表</string>
    <string name="wifiSet">WIFI设置</string>
    <string name="upload">数据上传</string>
    <string name="pName">姓名</string>
    <string name="RequiredPhone">手机号码</string>
    <string name="DoctorPhone">医生电话</string>
    <string name="RequiredID">身份证号</string>
    <string name="have_no_data">暂无数据</string>
    <string name="hpv_no">不需要绑定HPV码</string>
    <string name="loadingMEssage">正在加载数据</string>
    <string name="case_image_show">图片展示</string>
    <string name="case_image_video">视频展示</string>
    <string name="case_register_message">登记信息</string>
    <string name="case_return">返回</string>
    <string name="case_imageFirst">第一张图片</string>
    <string name="case_imageLast">最后一张图片</string>
    <string name="case_imageNo">暂无图片</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient_select">查询</string>
    <string name="setting_Treasures_of_vision_wifi">主机WIFI</string>
    <string name="setting_printer_wifi">局域网WIFI</string>
    <string name="setting_wifi_name">选择需要保存的wifi名称</string>
    <string name="setting_WIFI_filters">WIFI过滤：</string>
    <string name="setting_WIFI_name">WIFI名称：</string>
    <string name="setting_WIFI_filters_hint">请输入需要搜索的WIFI名称部分字段</string>
    <string name="setting_WIFI_name_hint">请输入WIFI名称</string>
    <string name="setting_WIFI_password">WIFI密码：</string>
    <string name="setting_WIFI_password_hint">请输入WIFI密码</string>
    <string name="clear_wifi">清除</string>
    <string name="save_wifi">保存</string>
    <string name="setting_gps">设置GPS</string>
    <string name="setting_gps_list">需要先打开GPS开关，才能搜索到附近的wifi信息</string>
    <string name="setting_wifi_title">设置</string>


    <string name="titleBar_back">返回</string>
    <string name="titleBar_save">保存</string>
    <string name="titleBar_title">标题</string>


    <string name="save_wifi_test_success">WIFI 能上网</string>
    <string name="save_wifi_test_fail">WIFI 不能上网</string>
    <string name="wifiSuccessMsg">Wifi连接成功</string>
    <string name="wifiFaildMSg">Wifi连接失败</string>
    <string name="wifiProcessMsg">Wifi正在尝试连接...</string>
    <string name="wifiProcessMsgSZB">主机Wifi正在尝试连接...</string>
    <string name="wifiProcessMsgLAN">局域网Wifi正在尝试连接...</string>
    <string name="wifiSZBFailMsg">主机没有打开或者wifi设置不正确</string>
    <string name="wifiLANFailMsg">局域网没打开或者wifi设置不正确</string>
    <string name="wifiLANFaildNet">请检查局域网wifi设置是否正确</string>
    <string name="wifiPass_save_success">设置成功</string>
    <string name="wifiFailMsgprint">请连接可上网的网络</string>
    <string name="wifiTestPing">正在测试网络...</string>
    <string name="image_artword">原图</string>
    <string name="image_acetic_acid_white">醋酸白</string>
    <string name="image_Lipiodol">碘</string>
    <string name="wifi_connecting">WiFi正在连接中 ... </string>
    <string name="wifi_start_connect">开始连接WiFi ... </string>
    <string name="wifi_test_net">wifi 连接成功，正在测试能否上网 ....</string>
    <string name="wifi_no_eixst">请检查主机是否已经打开，后台正在搜索 wifi....</string>
    <string name="wifi_LANname_empty">局域网Wifi 未设置，请设置WiFi账号和密码</string>
    <string name="wifi_SZBname_empty">主机Wifi 未设置，请设置WiFi账号和密码</string>
    <string name="wifi_name_error">请确认WiFi密码是否正确</string>
    <string name="wifi_stop_search">停止搜索WiFi</string>
    <string name="wifi_return">再按一次返回</string>
    <string name="login_fail_1">该用户不存在</string>
    <string name="login_fail_2">密码错误</string>
    <string name="login_fail_3">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_in">正在登录...</string>
    <string name="login_info_empty">登陆信息不能为空</string>
    <string name="login_permission">请授权相应的权限</string>
    <string name="register_in">正在注册...</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed_3">该用户已注册</string>
    <string name="register_failed_4">注册失败</string>
    <string name="register_msg_empty">注册信息不能为空</string>
    <string name="register_msg_unLike">两次输入密码不一致</string>
    <string name="register_mobile_error">手机号码不正确</string>
    <string name="register_mobile_password_length">密码长度最少是6位</string>
    <string name="register_verify_mobile_1">该手机号不是医生用户</string>
    <string name="register_verify_mobile_2">该码已使用</string>
    <string name="register_verify_start">正在核销...</string>
    <string name="register_verify_success">核销成功</string>
    <string name="register_verify_failed">核销失败</string>
    <string name="register_verify_needinfo">必填信息不能为空</string>
    <string name="fragment_getImage">获取图像</string>
    <string name="fragment_updataImage">上传图像</string>
    <string name="fragment_startUpdate">开始上传</string>


    <string name="msgSaveSuccess">信息保存成功</string>
    <string name="msgSaveFaild">信息保存失败</string>
    <string name="case_select_telephoen_hint">请输入手机号码</string>
    <string name="patient_select_name">请输入姓名</string>
    <string name="patient_select_ID">请输入身份证号</string>
    <string name="patient_data_no">暂无数据</string>
    <string name="msg_list">信息列表</string>

    <string name="ftpname">FTP账号：</string>
    <string name="ftppassword">FTP密码：</string>
    <string name="ftpsetting">FTP设置</string>
    <string name="setting_delete">删除设置</string>
    <string name="ftpLoginFaild">FTP服务器连接失败，请检查FTP账户密码是否正确。</string>
    <string name="ftpLoginSuccess">FTP服务器连接成功。</string>
    <string name="ftpAccountPasswordNull">请输入FTP账号密码</string>
    <string name="ftpLoginTest">正在连接FTP服务器...</string>
    <string name="commitData">上传数据</string>
    <string name="pId">序号</string>
    <!--<string name="pName">姓名</string>-->
    <string name="pAge">年龄</string>
    <string name="upLoadFaild">上传失败</string>
    <string name="getImage">获取图像</string>
    <string name="upLoadImage">上传图像</string>
    <string name="setting_please_change">请选择</string>
    <string name="forover_save">永久保留</string>
    <string name="twoweek_delete">两周删除</string>
    <string name="authCodebtn">验证码    :</string>
    <string name="inputauthCode">输入验证码</string>
    <string name="authModifyTitle">修改密码</string>
    <string name="authModifyError">验证码输入错误</string>
    <string name="authModifyPass">密码修改成功</string>
    <string name="authModifyPassFaild">密码修改失败</string>
    <string name="authMobile">手机号码不能为空</string>
    <string name="forgetPassword">忘记密码 ? </string>
    <string name="authCodesendFailed">验证码发送失败 </string>
    <string name="authCodeTelnoExist">手机号码不存在 </string>
    <string name="authCodeTelnoEmpty">信息不能为空 </string>
    <string name="delete_data">正在删除数据...</string>
    <string name="delete">一键清除</string>
    <string name="delete_success">数据清除成功</string>
    <string name="upload_app">软件更新</string>
    <string name="wifiFailLANMsg">局域网没打开或者wifi设置不正确</string>

    //更新
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
</resources>
